flux/dmz/authelia/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    network-zone: dmz
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
